--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,35 @@ name: TypeScript CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
+  lint:
+    name: Run ESLint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint
+
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    needs: lint  # Ensures linting passes before testing
 
     steps:
       - name: Checkout repository
@@ -42,7 +63,7 @@ jobs:
           node-version: '18'
           cache: 'npm'
 
-      - name: Install dependencies (from cache)
+      - name: Install dependencies
         run: npm ci
 
       - name: Compile TypeScript
