--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "main": "index.js",
   "scripts": {
   "build": "tsc",
-  "test": "jest"
+  "test": "jest",
+  "lint": "eslint 'src/**/*.ts' --fix"
 }
 ,
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.15.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0"
   },
   "dependencies": {
     "ansi-escapes": "^4.3.2",
@@ -79,7 +87,6 @@
     "get-package-type": "^0.1.0",
     "get-stream": "^6.0.1",
     "glob": "^7.2.3",
-    "globals": "^11.12.0",
     "graceful-fs": "^4.2.11",
     "has-flag": "^4.0.0",
     "hasown": "^2.0.2",
