--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
   "build": "tsc",
   "test": "jest",
-  "lint": "eslint 'src/**/*.ts' --fix"
+  "lint": "eslint . --ext .ts --fix"
 }
+
 ,
   "keywords": [],
   "author": "",
